--- a/html/page.html
+++ b/html/page.html
@@ -5,25 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Страница</title>
 </head>
+
 <body>
-    {{.Count}} - число пользователей
-    <br />
-{{ if .IsAdmin}}
-<p>Вы админ</p>
-{{ else }}
-<p>вы не админ</p>
-{{ end }}
-<br />
-{{ if eq .Count 0 }}
-<p>Пользователей нет</p>
-{{ else if lt .Count 10}}
-<p>Пользователей меньше 10</p>
-{{ else }}
-<p>пользователей 10 или более</p>
-{{ end }}
-<br />
-{{ if and .IsAdmin .CanUse }}
-<p> Админ и может использовать</p>
-{{ end }}
+    <div>
+        {{ range .Names }}
+        <p>{{ . }}</p>
+        {{ end }}
+    </div>
+    <div>
+        {{ range .Users }}
+        <p>{{ .Id }} - {{ .Name }}</p>
+        {{ end }}
+    </div>
+    
 </body>
 </html>
