--- a/html/page.html
+++ b/html/page.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница</title>
-</head>
+{{ template "base" }}
 
-<body>
-    {{ $test := "Тест"}}
-    <div>
-        
-        {{ range .Names }}
-        <p>{{ . }}</p>
-        {{ end }}
-    </div>
-    {{ $test = "Изменение"}}
-    <div>
-        {{ range .Users }}
-        <p>{{ .Id }} - {{ .Name | ToUpper }} - {{ $test}}</p>
-        {{ end }}
-    </div>
-    
-</body>
-</html> 
+{{ define "title" }}
+<title>Главная страница</title>
+{{ end }}
+
+{{ define "content" }}
+<p>Page 1</p>
+{{ end }}
